EE-1350:  Section 508 Interactive Maps * Changed load-thumbnail to use visibility:hidden so carousel loads correctly * Adjusts thumbnails so shows when part is visible (vs entire thumbnail visible) * Updates tab handling so updates carousel when loads

--- a/drupal/sites/all/modules/custom/features/my_maps_view/css/MyMaps.css
+++ b/drupal/sites/all/modules/custom/features/my_maps_view/css/MyMaps.css
@@ -42,12 +42,15 @@
     padding: 5px;
 }
 
-.jcarousel li.load-thumbnail,
+.jcarousel li.load-thumbnail {
+    visibility: hidden;
+}
 .jcarousel li.hide-thumbnail {
     display: none;
 }
 .jcarousel li.load-thumbnail.active {
     display: block;
+    visibility: visible;
 }
 
 .thumbitem-border {
